# CozyPup

./: .gitignore  CLAUDE.md  GoogleService-Info.plist  README.md  README.zh.md  claude-progress.txt  cloudbuild.yaml  feature_list.json  项目开发文档.md
backend/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  feature_list.json  pyproject.toml
backend/alembic/: env.py
backend/app/: auth.py  auth_apple_web.py  config.py  database.py  flags.py  main.py  models.py  storage.py  storekit.py  worker.py
backend/eval_history/: 2026-04-20T19-00-51+00-00.json  2026-04-20T19-19-13+00-00.json
backend/knowledge/: README.md
backend/scripts/: backfill_embeddings.py  compare_models.py
backend/tests/: conftest.py  test_agent_v2_integration.py  test_agents_emergency.py  test_agents_router.py  test_auth_me.py  test_base_agent.py  test_calendar_photos.py  test_chat_agent.py  test_cli.py  test_context_agent.py  test_daily_tasks.py  test_debug_core.py  test_email_agent.py  test_emergency_router.py  test_emergency_v2.py  test_error_system.py  test_executor.py  test_i18n_integration.py  test_integration.py  test_locale.py  test_map_agent.py  test_orchestrator.py  test_ownership.py  test_post_processor.py  test_pre_processor.py  test_prompts_v2.py  test_rag_assembler.py  test_rag_base.py  test_rag_embedder.py  test_rag_embeddings.py  test_rag_event_sync.py  test_rag_integration.py  test_rag_intent.py  test_rag_intent_filter.py  test_rag_query_expansion.py  test_rag_recall.py  test_rag_retrieval.py  test_rag_retrievers.py  test_rag_species_filter.py  test_rag_stats.py  (+10 more)
(+635 files in other folders)
